force-app/main/default/objects/Seminar_Application__c/Seminar_Application__c.object-meta.xml
<CustomObject>
    <label>OMI Seminar / Observership Application</label>
    <nameField>
        <displayFormat>{000000}</displayFormat>
        <label>App #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>OMI Seminar / Observership Application</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>