force-app/main/default/objects/Seminar_Application__c/fields/App_Date__c.field-meta.xml
<CustomField>
    <fullName>App_Date__c</fullName>
    <label>App. Date</label>
    <type>Date</type>
</CustomField>