force-app/main/default/objects/Seminar_Application__c/fields/Application_Stage__c.field-meta.xml
<CustomField>
    <fullName>Application_Stage__c</fullName>
    <inlineHelpText>1) Stage 1
2) Stage 2</inlineHelpText>
    <label>Application Stage</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>CV Received</fullName>
            </value>
            <value>
                <fullName>Recommendation Letter Received</fullName>
            </value>
            <value>
                <fullName>Mexico Interview Conducted</fullName>
            </value>
            <value>
                <fullName>Mexico Approval</fullName>
            </value>
            <value>
                <fullName>Mexico Rejection</fullName>
            </value>
            <value>
                <fullName>Salzburg Approval</fullName>
            </value>
            <value>
                <fullName>Salzburg Rejection</fullName>
            </value>
            <value>
                <fullName>Post Seminar Report Received</fullName>
            </value>
            <value>
                <fullName>Not Attended</fullName>
            </value>
            <value>
                <fullName>Attended</fullName>
            </value>
            <value>
                <fullName>Attended Observership</fullName>
            </value>
            <value>
                <fullName>Seminar Cancelled</fullName>
            </value>
            <value>
                <fullName>Travel Restrictions COVID 19</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>