force-app/main/default/objects/Seminar_Application__c/fields/Average__c.field-meta.xml
<CustomField>
    <fullName>Average__c</fullName>
    <label>Pre Test Average</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>