force-app/main/default/objects/Seminar_Application__c/fields/Average_Post_Test__c.field-meta.xml
<CustomField>
    <fullName>Average_Post_Test__c</fullName>
    <label>Post Test Average</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>