force-app/main/default/objects/Seminar_Application__c/fields/CV__c.field-meta.xml
<CustomField>
    <fullName>CV__c</fullName>
    <defaultValue>false</defaultValue>
    <label>CV</label>
    <type>Checkbox</type>
</CustomField>