force-app/main/default/objects/Seminar_Application__c/fields/Diplomas__c.field-meta.xml
<CustomField>
    <fullName>Diplomas__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Diplomas</label>
    <type>Checkbox</type>
</CustomField>