force-app/main/default/objects/Seminar_Application__c/fields/Fellow_Contribution__c.field-meta.xml
<CustomField>
    <fullName>Fellow_Contribution__c</fullName>
    <label>Fellow Contribution</label>
    <length>50</length>
    <type>Text</type>
</CustomField>