force-app/main/default/objects/Seminar_Application__c/fields/Flight_commitment__c.field-meta.xml
<CustomField>
    <fullName>Flight_commitment__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Flight commit</label>
    <type>Checkbox</type>
</CustomField>