force-app/main/default/objects/Seminar_Application__c/fields/Interview_date__c.field-meta.xml
<CustomField>
    <fullName>Interview_date__c</fullName>
    <description>English Interview Date</description>
    <label>Interview date</label>
    <type>Date</type>
</CustomField>