force-app/main/default/objects/Seminar_Application__c/fields/Invitation_Letter__c.field-meta.xml
<CustomField>
    <fullName>Invitation_Letter__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Inv Letter</label>
    <type>Checkbox</type>
</CustomField>