force-app/main/default/objects/Seminar_Application__c/fields/Invoice__c.field-meta.xml
<CustomField>
    <fullName>Invoice__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Invoice</label>
    <type>Checkbox</type>
</CustomField>