force-app/main/default/objects/Seminar_Application__c/fields/Notice_of_Privacy__c.field-meta.xml
<CustomField>
    <fullName>Notice_of_Privacy__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Priv Policy</label>
    <type>Checkbox</type>
</CustomField>