force-app/main/default/objects/Seminar_Application__c/fields/Participation_Result__c.field-meta.xml
<CustomField>
    <fullName>Participation_Result__c</fullName>
    <label>Participation Result</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Excellent Participation</fullName>
            </value>
            <value>
                <fullName>Best Pre Test Result</fullName>
            </value>
            <value>
                <fullName>Best Post Test Result</fullName>
            </value>
            <value>
                <fullName>Excellent case presentation</fullName>
            </value>
            <value>
                <fullName>Poor Spoken English</fullName>
            </value>
            <value>
                <fullName>Poor participation</fullName>
            </value>
            <value>
                <fullName>Most Improved</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>