force-app/main/default/objects/Seminar_Application__c/fields/Passport__c.field-meta.xml
<CustomField>
    <fullName>Passport__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Passport</label>
    <type>Checkbox</type>
</CustomField>