force-app/main/default/objects/Seminar_Application__c/fields/Post_test_result__c.field-meta.xml
<CustomField>
    <fullName>Post_test_result__c</fullName>
    <label>Post Test Result</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>