force-app/main/default/objects/Seminar_Application__c/fields/Pre_Test_Result__c.field-meta.xml
<CustomField>
    <fullName>Pre_Test_Result__c</fullName>
    <label>Pre Test Result</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>