force-app/main/default/objects/Seminar_Application__c/fields/Recommendation_letter__c.field-meta.xml
<CustomField>
    <fullName>Recommendation_letter__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Rec letter</label>
    <type>Checkbox</type>
</CustomField>