force-app/main/default/objects/Seminar_Application__c/fields/Rejection_Reason__c.field-meta.xml
<CustomField>
    <fullName>Rejection_Reason__c</fullName>
    <label>Rejection Reason</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Late Applicant</fullName>
            </value>
            <value>
                <fullName>Declined Invitation</fullName>
            </value>
            <value>
                <fullName>English Skills</fullName>
            </value>
            <value>
                <fullName>Will Apply Next Year</fullName>
            </value>
            <value>
                <fullName>Not Specialized</fullName>
            </value>
            <value>
                <fullName>No Passport</fullName>
            </value>
            <value>
                <fullName>Not Mexican</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>