force-app/main/default/objects/Seminar_Application__c/fields/Replica_Commitment__c.field-meta.xml
<CustomField>
    <fullName>Replica_Commitment__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Replica Commit</label>
    <type>Checkbox</type>
</CustomField>