force-app/main/default/objects/Seminar_Application__c/fields/Replica_plan__c.field-meta.xml
<CustomField>
    <fullName>Replica_plan__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Replica plan</label>
    <type>Checkbox</type>
</CustomField>