force-app/main/default/objects/Seminar_Application__c/fields/Seminar__c.field-meta.xml
<CustomField>
    <fullName>Seminar__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Seminar</label>
    <referenceTo>Campaign</referenceTo>
    <relationshipName>Seminar_Applications</relationshipName>
    <type>Lookup</type>
</CustomField>