force-app/main/default/objects/Seminar_Application__c/fields/Seminar_photos__c.field-meta.xml
<CustomField>
    <fullName>Seminar_photos__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Sem photos</label>
    <type>Checkbox</type>
</CustomField>