force-app/main/default/objects/Seminar_Application__c/fields/Sponsor__c.field-meta.xml
<CustomField>
    <fullName>Sponsor__c</fullName>
    <label>Sponsor</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>AMSA</fullName>
            </value>
            <value>
                <fullName>IMSS</fullName>
            </value>
            <value>
                <fullName>FELLOW</fullName>
            </value>
            <value>
                <fullName>ITESM</fullName>
            </value>
            <value>
                <fullName>OTHER</fullName>
            </value>
            <value>
                <fullName>OMI</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>