force-app/main/default/objects/Seminar_Application__c/fields/Testimony__c.field-meta.xml
<CustomField>
    <fullName>Testimony__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Testimony</label>
    <type>Checkbox</type>
</CustomField>