force-app/main/default/objects/Seminar_Application__c/fields/Travel_Itinerary__c.field-meta.xml
<CustomField>
    <fullName>Travel_Itinerary__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Travel info</label>
    <type>Checkbox</type>
</CustomField>