force-app/main/default/objects/Seminar_Application__c/validationRules/Post_Seminar_Report_received.validationRule-meta.xml
<ValidationRule>
    <fullName>Post_Seminar_Report_received</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
ISPICKVAL(Application_Stage__c, &quot;Post Seminar Report Received&quot;),
ISBLANK ( Pre_Test_Result__c ),
ISBLANK ( Pre_Test_Result__c ),
ISBLANK ( Average__c ),
ISBLANK ( Average_Post_Test__c )
)</errorConditionFormula>
    <errorMessage>Please include Pre and Post Test Results</errorMessage>
</ValidationRule>